k8s/minikube/url-gateway-service/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-gateway
  namespace: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: url-gateway
    spec:
      containers:
        - name: url-gateway
          image: colakkemree/url-shortener-gateway:stable
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '0.5'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 150Mi
          ports:
            - name: users
              containerPort: 4000
