k8s/minikube/url-gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-gateway
  namespace: url-shortener
spec:
  type: ClusterIP
  selector:
    app: url-gateway
  ports:
    - name: gateway
      port: 4000
      targetPort: 4000
      protocol: TCP
